# RP3G4

./: README.md
Entrega 1/: Carros.txt  Casos USO RPII.xlsx  Locacao.txt  Locadora.c  Locadora1.c  locadora1.c
Entrega 1/NovoTrabalho/: Clientes.txt  FrotaCarros.txt  Locadora.c
Entrega 2/: .gitignore  Funcoes.hs  LICENSE  Main.hs  haskell.cabal
Entrega 2/App/: Utils.hs
Entrega 2/Arquivos/: Jogos_resultados.csv  Jogos_resultados.txt
Entrega 2/Championship/: Datas.hs  ReadFile.hs
Entrega 2/Championship/database/: result.csv
Entrega 2/Dependencies/: Import.hs
Entrega 2/File/: ReadFile.hs
Entrega 2/Menu/: Menu.hs
Entrega 2/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
Entrega 2/src/: Main.hs  Menu.hs
Entrega 2/src/Championship/: Entrega 2.code-workspace  Manipulate.hs  ReadFile.hs  Structures.hs  Types.hs
Entrega 2/src/Championship/database/: result.csv  result_test.csv  team_result.csv
Entrega 2/src/Manipulacao/: Funcoes.hs  ManipularArq.hs
Entrega 2/src/Utils/: Utils.hs
Entrega 2/src/Views/: Main.hs  Menu.hs  ShowResult.hs
Entrega 3/: .gitignore  pom.xml
Entrega 3/Dependencies/: pom.xml
Entrega 3/Inventory/: Game.java  Genre.java  Platform.java
Entrega 3/Sales/: DaySalesReports.java  Purchase.java  WeekSalesReports.java
Entrega 3/Users/: Admin.java  Client.java  Manager.java  Seller.java  User.java
Entrega 3/entities/: Admin.java  Client.java  Manager.java  Seller.java  User.java
Entrega 4/: .gitignore  Facts.pl  README.md  baseimobiliaria.pl  real_estate.pl
(+96 files in other folders)
