name:                haskell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Matheus Boeira Dias
maintainer:          matheusboeira.aluno@unipampa.edu.br
copyright:           2022 Matheus Boeira Dias
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable haskell
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  other-modules:       Championship.ReadFile
                       , Championship.Types
                       , Championship.Structures
                       , Utils.Utils
                       , Views.Menu
                       
